--- a/index.html
+++ b/index.html
@@ -1,83 +1,149 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Restaurante Sabor Caseiro</title>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
 <style>
+
 body {
-font-family: Arial, sans-serif;
-margin: 0;
-padding: 0;
-text-align: center;
-background-color: #fff8f0;
+    margin: 0;
+    font-family: 'Poppins', sans-serif;
+    background-color: #f9f9f9;
+    color: #333;
 }
 
 header {
-background-color: #c0392b;
-color: white;
-padding: 40px 20px;
+    text-align: center;
+    padding: 80px 20px;
+    background: #111;
+    color: white;
 }
 
-button {
-background-color: #25D366;
-color: white;
-padding: 15px 25px;
-border: none;
-font-size: 18px;
-border-radius: 8px;
-cursor: pointer;
+header h1 {
+    font-size: 36px;
+    margin-bottom: 10px;
+}
+
+header p {
+    font-weight: 300;
+    margin-bottom: 30px;
+}
+
+.btn {
+    background: #25D366;
+    color: white;
+    padding: 14px 28px;
+    border-radius: 50px;
+    text-decoration: none;
+    font-weight: 500;
+    transition: 0.3s;
+}
+
+.btn:hover {
+    opacity: 0.8;
 }
 
 .section {
-padding: 40px 20px;
+    padding: 70px 20px;
+    max-width: 900px;
+    margin: auto;
+    text-align: center;
+}
+
+.section h2 {
+    margin-bottom: 40px;
+    font-size: 28px;
 }
 
 .cardapio-item {
-margin: 15px 0;
+    margin-bottom: 25px;
+}
+
+.cardapio-item h3 {
+    margin-bottom: 5px;
+}
+
+.galeria {
+    display: flex;
+    gap: 15px;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.galeria img {
+    width: 280px;
+    border-radius: 12px;
 }
 
 footer {
-background-color: #333;
-color: white;
-padding: 20px;
+    background: #111;
+    color: white;
+    text-align: center;
+    padding: 40px 20px;
+    margin-top: 50px;
 }
+
+/* Botão flutuante */
+.whatsapp-float {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background: #25D366;
+    color: white;
+    font-size: 24px;
+    padding: 15px 18px;
+    border-radius: 50%;
+    text-decoration: none;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+}
+
 </style>
 </head>
 
 <body>
 
 <header>
-<h1>Restaurante Sabor Caseiro</h1>
-<p>Sabor de verdade na sua mesa 🍕</p>
-<a href="https://wa.me/5599999999999">
-<button>Fazer Pedido no WhatsApp</button>
-</a>
+    <h1>Restaurante Sabor Caseiro</h1>
+    <p>Sabor de verdade na sua mesa</p>
+    <a class="btn" href="https://wa.me/5555999999999">Fazer Pedido</a>
 </header>
 
-<div class="section">
-<h2>Cardápio</h2>
+<section class="section">
+    <h2>Cardápio</h2>
 
-<div class="cardapio-item">
-<h3>Pizza Calabresa – R$ 45</h3>
-<p>Molho especial, mussarela e calabresa artesanal.</p>
-</div>
+    <div class="cardapio-item">
+        <h3>Pizza Calabresa – R$ 45</h3>
+        <p>Molho especial, mussarela e calabresa artesanal.</p>
+    </div>
 
-<div class="cardapio-item">
-<h3>X-Burger – R$ 22</h3>
-<p>Pão, carne, queijo e molho da casa.</p>
-</div>
+    <div class="cardapio-item">
+        <h3>X-Burger – R$ 22</h3>
+        <p>Pão, carne, queijo e molho da casa.</p>
+    </div>
+</section>
 
-</div>
+<section class="section">
+    <h2>Galeria</h2>
+    <div class="galeria">
+        <img src="https://images.unsplash.com/photo-1601924582975-7d58d7e9c9f1" alt="Pizza">
+        <img src="https://images.unsplash.com/photo-1550547660-d9450f859349" alt="Hamburguer">
+        <img src="https://images.unsplash.com/photo-1546069901-ba9599a7e63c" alt="Prato">
+    </div>
+</section>
 
-<div class="section">
-<h2>Sobre Nós</h2>
-<p>Somos um restaurante familiar focado em qualidade e atendimento rápido.</p>
-</div>
+<section class="section">
+    <h2>Sobre Nós</h2>
+    <p>Somos um restaurante familiar focado em qualidade, sabor e atendimento rápido.</p>
+</section>
 
 <footer>
-<p>📍 Doutor Maurício Cardoso - RS</p>
-<p>📱 WhatsApp: (55) 99999-9999</p>
+    <p>📍 Doutor Maurício Cardoso - RS</p>
+    <p>📱 WhatsApp: (55) 99999-9999</p>
 </footer>
+
+<a class="whatsapp-float" href="https://wa.me/5555999999999">📲</a>
 
 </body>
 </html>
